syntax = "proto3";

package proto;

service ProductService {
    rpc Test (ProductRequest) returns(ProductResponse) {}
}

message ProductRequest {
    string pid = 1;
}

message ProductResponse {
    int32 code = 1;
    string msg = 2;
    string data = 3;
}

